--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,13 @@ Depends:
 Imports:
   xml2,
   tibble,
-  purrr
+  purrr,
+  glue
+Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.1
+Suggests: 
+    covr,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
